Fixes scrollbar flickering

--- a/index/index-style.css
+++ b/index/index-style.css
@@ -4,6 +4,10 @@ body {
 	padding-bottom:10px;
 }
 
+.submenubar-body {
+	min-height: 100vh;
+}
+
 .grid-container {
 	display:grid;
 	grid-template-columns: 48% 48%;
